[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scripts/container.gd" type="Script" id=2]
[ext_resource path="res://scripts/interact_label.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.25
height = 0.9

[node name="Player" type="KinematicBody"]
collision_mask = 6
script = ExtResource( 1 )

[node name="BodyCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="CameraXPivot" type="Spatial" parent="Head"]

[node name="Camera" type="Camera" parent="Head/CameraXPivot"]
current = true
fov = 80.7
far = 250.0

[node name="Crosshair" type="RayCast" parent="Head/CameraXPivot"]
transform = Transform( 1, 0, 0, 0, 0.922086, -0.386984, 0, 0.386984, 0.922086, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -0.801, -1.298 )
collision_mask = 6
debug_shape_custom_color = Color( 0.0235294, 0.0235294, 0.294118, 0.290196 )

[node name="Container" type="Spatial" parent="Head/CameraXPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00276393, -1.49846 )
script = ExtResource( 2 )

[node name="TopHeadRayCast" type="RayCast" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.775, 0 )
enabled = true
cast_to = Vector3( 0, 1, 0 )
collision_mask = 6

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD"]
anchor_left = 7.225
anchor_top = 6.725
anchor_right = 11.05
anchor_bottom = 8.75
margin_left = -33.0
margin_top = -13.0
margin_right = -54.0
margin_bottom = -33.0
rect_scale = Vector2( 4, 4 )
size_flags_vertical = 5
custom_colors/font_color = Color( 0.415686, 0.415686, 0.415686, 1 )
custom_colors/font_color_shadow = Color( 0.0784314, 0.0784314, 0.0823529, 1 )
custom_constants/shadow_as_outline = 1
align = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
crp = NodePath("../../Head/CameraXPivot/Crosshair")
